examples/invalid_feature_secret/invalid_feature_status.argx
module invalid.invalid_feature_status
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
feature F { provider OpenAI status legendary default disabled requires approval }
